--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VerificacionCaja"></activity>
+        <activity
+            android:name=".ManejoCaja"
+            android:label="@string/title_activity_manejo_caja"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".VerificacionCaja" />
         <activity android:name=".registroCaja" />
         <activity android:name=".OpcionesIniciales" />
         <activity android:name=".LectorQR" />
-        <activity android:name=".QRGeneral" />
         <activity android:name=".Registro" />
         <activity
             android:name=".SplashInicial"
@@ -34,7 +37,7 @@
             android:name=".CaptureAct"
             android:screenOrientation="fullSensor"
             android:stateNotNeeded="true"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden" />
 
         <meta-data
             android:name="preloaded_fonts"
