--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
 
 }
